--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.3.0
   provider: ^6.0.5
+  sqflite_common_ffi: ^2.3.0+2
 
 dev_dependencies:
   flutter_test:
