--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: realshoes_factory_management_software
-description: A new Flutter project.
+description: Shoes Factory Management system {Employee check in and payment}{Stock Management}{Sales Operation}
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -32,8 +32,7 @@ dependencies:
     sdk: flutter
   responsive_builder: ^0.7.0
   flutter_slidable:
-  drift: ^2.12.1
-  sqlite3_flutter_libs: ^0.5.0
+  mongo_dart: ^0.9.3
   path_provider: ^2.0.0
   path: ^1.8.3
 
@@ -41,9 +40,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  sqflite: ^2.3.0
   provider: ^6.0.5
-  sqflite_common_ffi: ^2.3.0+2
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +52,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  drift_dev: ^2.12.1
   build_runner: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
