--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   image_picker: ^1.0.4
+  flutter_image_compress: ^2.0.4
 
 dev_dependencies:
   flutter_test:
